WProf: more flexible Image and PDF import with token replacement.